--- a/confirmation.html
+++ b/confirmation.html
@@ -22,11 +22,58 @@
         </nav>
     </header>
     <main>
-        <section>
+        <nav class="nav-back">
+            <a href="checkout.html"><i class="fa-solid fa-arrow-left"></i></a> 
+            <a href="checkout.html"><p>Back</p></a>
+       </nav>
+        <section class="confirmation">
             <i class="fa-solid fa-circle-check confirmation-icon"></i>
             <h1>Thank You!</h1>
             <p>Your order WY6547 has been registered. You will receive a confirmation on your email shortly.</p>
-            <a href="index.html" class="continue-shopping">Continue Shopping</a>
+        </section>
+        <section class="order-summary">
+            <div>
+                <p>Order number</p>
+                <p>WY6547</p>
+            </div>
+            
+            <div>
+                 <p>Order Date</p>
+                <p>2025-02-11</p>
+            </div>
+            <div>
+                <p>Payment</p>
+                <p>Visa **** 3248</p>
+            </div>
+            <div>
+                <p>Estimated Delivery</p>
+                <p>2025-02-17</p>
+            </div>
+            <div>
+                <p>Shipping Address</p>
+                <p>John Smith</p>
+                <p>Mølleparken 4, 0459 Oslo</p>
+            </div>
+        </section>
+        <section class="order-details">
+            <h4>Order Details</h4>
+            <div class="cart-items">
+                <img src="images/Jacket-1.jpg" alt="Red Softshell Jacket" class="checkout-image">
+                <div>
+                    <p>Endurance Softshell Jacket</p>
+                    <p>Color: Red</p>
+                    <p>Size: Large</p>
+                </div>
+            </div>
+            <div>
+                <p>Subtotal: $79</p>
+                <p>Shipping: $0</p>
+                <p>Estimated taxes: $0</p>
+                <p>Total: $79</p>
+            </div>
+            <div class="continue-shopping__button">
+                <a href="index.html" class="continue-shopping">Continue Shopping</a>
+            </div>        
         </section>
         <section class="camping-image"></section>
     </main>
