--- a/mens-jackets.html
+++ b/mens-jackets.html
@@ -36,7 +36,11 @@
     <main>
         <nav>
             <a href="index.html" class="nav-breadcrumbs">Home</a>
-            <a href="mens-jackets.html" class="nav-breadcrumbs">Men's Jackets</a>
+            <a href="mens-jackets.html" class="nav-breadcrumbs slash">Men's Jackets</a>
+            <div class="nav-back">
+                <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a> 
+                <a href="index.html"><p>Back</p></a>
+            </div>
         </nav>
         <h1>Men's Jackets</h1>
         <section class="sort-and-relevance">
@@ -58,7 +62,6 @@
                     <div class="circle-green"></div>
                     <div class="circle-black"></div>   
                 </div>     
-                <p>Color: blue, green, black</p>
                 <p>Price: $79</p>
             </div>
             <div class="product">
@@ -70,7 +73,6 @@
                     <div class="circle-yellow"></div>  
                     <div class="circle-red"></div> 
                 </div>
-                <p>Color: blue, green, yellow, red</p>
                 <p>Price: $99</p>
             </div>
             <div class="product">
@@ -81,7 +83,6 @@
                     <div class="circle-green"></div> 
                     <div class="circle-orange"></div>  
                 </div>
-                <p>Color: blue, green, orange</p>
                 <p>Price: $129</p>
             </div>
             <div class="product">
@@ -91,7 +92,6 @@
                     <div class="circle-red"></div>
                     <div class="circle-black"></div>
                 </div>
-                <p>Color: red, black</p>
                 <p>Price: $89</p>
             </div>
             <div class="product">
@@ -104,7 +104,6 @@
                     <div class="circle-red"></div>
                     <div class="circle-black"></div>  
                 </div>
-                <p>Color: blue, yellow, orange, red, black</p>
                 <p>Price: $59</p>
             </div>
             <div class="product">
@@ -115,7 +114,6 @@
                     <div class="circle-orange"></div> 
                     <div class="circle-black"></div> 
                 </div>
-                <p>Color: blue, orange, black</p>
                 <p>Price: $119</p>
             </div>
         </section>
