--- a/checkout.html
+++ b/checkout.html
@@ -22,8 +22,12 @@
         </nav>
     </header>
     <main>
+        <nav class="nav-back">
+            <a href="cart.html"><i class="fa-solid fa-arrow-left"></i></a> 
+            <a href="cart.html"><p>Back</p></a>
+       </nav>
         <h1>Checkout</h1>
-        <form>
+        <form class="checkout-form">
             <fieldset>
                 <legend>Billing Address</legend>
                 <label for="firstname">First Name</label>
@@ -43,43 +47,61 @@
             </fieldset>
             <fieldset>
                 <legend>Delivery Method</legend>
-                <input type="radio" id="standard" name="delivery" value="standard" class="form__input" checked>
-                <label for="standard">Standard (4-5 business days) Free</label>
-                <input type="radio" id="express" name="delivery" value="express" class="form__input">
-                <label for="express">Express (1-2 business days) $9</label>
+                <div class="delivery-method">
+                    <input type="radio" id="standard" name="delivery" value="standard" class="form__input" checked>
+                    <label for="standard">Standard (4-5 business days) Free</label>
+                </div>
+                <div class="delivery-method">
+                    <input type="radio" id="express" name="delivery" value="express" class="form__input">
+                    <label for="express">Express (1-2 business days) $9</label>
+                </div>
             </fieldset>
             <fieldset>
                 <legend>Payment Details</legend>
-                <input type="radio" id="creditcard" name="payment" value="creditcard" class="form__input" checked>
-                <label for="creditcard">Credit Card
+                <div class="payment-method">
+                    <input type="radio" id="creditcard" name="payment" value="creditcard" class="form__input" checked>
+                    <label for="creditcard">Credit Card
                     <input type="tel" id="creditcardnumber" name="creditcardnumber" class="form__input" placeholder="Card Number" required>
                     <input type="text" id="cardholdername" name="cardholdername" class="form__input" placeholder="Cardholder Name" required>
                     <input type="tel" id="expirationdate" name="expirationdate" class="form__input" placeholder="Exp. Date MM.YYYY" required>
                     <input type="tel" id="cvv" name="cvv" class="form__input" placeholder="CVV" required>
-                </label>
-                <input type="radio" id="Paypal" name="payment" value="Paypal" class="form__input">
-                <label for="Paypal">Paypal</label>
-                <input type="radio" id="Klarna" name="payment" value="Klarna" class="form__input">
-                <label for="Klarna">Klarna</label>
+                    </label>
+                </div>
+               <div class="payment-method">
+                    <input type="radio" id="Paypal" name="payment" value="Paypal" class="form__input">
+                    <label for="Paypal">Paypal</label>
+               </div>
+                <div class="payment-method">
+                    <input type="radio" id="Klarna" name="payment" value="Klarna" class="form__input">
+                    <label for="Klarna">Klarna</label>
+                </div>
             </fieldset>
-            <input type="checkbox" id="terms" name="terms" class="form__input" required>
-            <label for="terms">I have read and agree to the Terms and Conditions</label>
-            <input type="checkbox" id="newsletter" name="newsletter" class="form__input">
-            <label for="newsletter">I want to recieve emails with offers, new trends and styles</label>
+            <div class="terms">
+                <input type="checkbox" id="terms" name="terms" class="form__input" required>
+                <label for="terms">I have read and agree to the Terms and Conditions</label>
+            </div>
+            <div class="terms">
+                <input type="checkbox" id="newsletter" name="newsletter" class="form__input">
+                <label for="newsletter">I want to recieve emails with offers, new trends and styles</label>
+            </div>
         </form>
         <a href="confirmation.html" class="place-order-button">Place Order</a>
         <section>
             <h1>Order Summary</h1>
-            <article>
+            <div class="cart-items">
                 <img src="images/Jacket-1.jpg" alt="Red Softshell Jacket" class="checkout-image">
-                <h2>Endurance Softshell Jacket</h2>
-                <p>Color: Red</p>
-                <p>Size: Large</p>
-            </article>
-            <p>Subtotal: $79</p>
-            <p>Shipping: $0</p>
-            <p>Estimated taxes: $0</p>
-            <p>Total: $79</p>
+                <div>
+                    <h2>Endurance Softshell Jacket</h2>
+                    <p>Color: Red</p>
+                    <p>Size: Large</p>
+                </div>
+            </div>
+            <div>
+                <p>Subtotal: $79</p>
+                <p>Shipping: $0</p>
+                <p>Estimated taxes: $0</p>
+                <p>Total: $79</p>
+            </div>
         </section>
     </main>
     <footer>
