--- a/confirmation.html
+++ b/confirmation.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmation</title>
     <link href="css/styles.css" rel="stylesheet">
+    <link href="css/confirmation.css" rel="stylesheet">
+    <link href="css/media.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -31,7 +33,7 @@
             <h1>Thank You!</h1>
             <p>Your order WY6547 has been registered. You will receive a confirmation on your email shortly.</p>
         </section>
-        <section class="order-summary">
+        <section class="order__summary">
             <div>
                 <p>Order number</p>
                 <p>WY6547</p>
