--- a/mens-jackets.html
+++ b/mens-jackets.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Men's Jackets</title>
     <link href="css/styles.css" rel="stylesheet">
+    <link href="css/mens-jackets.css" rel="stylesheet">
+    <link href="css/media.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -61,19 +63,33 @@
                     <div class="circle-blue"></div>
                     <div class="circle-green"></div>
                     <div class="circle-black"></div>   
+                </div>
+                <div class="price-cart">
+                    <p class="price__product">$79</p>
+                    <i class="fa-solid fa-cart-shopping shoppingcart"></i>
+                    <div>
+                        <input type="checkbox" id="heart-checkbox-1" class="heart-checkbox"/>
+                        <label for="heart-checkbox-1" class="heart-checkbox-icon"></label>     
+                    </div>
                 </div>     
-                <p>Price: $79</p>
             </div>
             <div class="product">
                 <img src="images/Jacket-2.jpg" alt="Black Windbreaker Jacket" class="product-image">
                 <h2 class="product-title">Scott Windbreaker 2.0</h2>
                 <div class="colorchoice-medium">
-                     <div class="circle-blue"></div>
-                     <div class="circle-green"></div> 
+                    <div class="circle-blue"></div>
+                    <div class="circle-green"></div> 
                     <div class="circle-yellow"></div>  
                     <div class="circle-red"></div> 
                 </div>
-                <p>Price: $99</p>
+                <div class="price-cart">
+                    <p class="price__product">$79</p>
+                    <i class="fa-solid fa-cart-shopping shoppingcart"></i>
+                    <div>
+                        <input type="checkbox" id="heart-checkbox-2" class="heart-checkbox"/>
+                        <label for="heart-checkbox-2" class="heart-checkbox-icon"></label>     
+                    </div>                
+                </div>
             </div>
             <div class="product">
                 <img src="images/Jacket-3.jpg" alt="Black Jacket" class="product-image">
@@ -83,7 +99,14 @@
                     <div class="circle-green"></div> 
                     <div class="circle-orange"></div>  
                 </div>
-                <p>Price: $129</p>
+                <div class="price-cart">
+                    <p class="price__product">$79</p>
+                    <i class="fa-solid fa-cart-shopping shoppingcart"></i>
+                    <div>
+                        <input type="checkbox" id="heart-checkbox-3" class="heart-checkbox"/>
+                        <label for="heart-checkbox-3" class="heart-checkbox-icon"></label>     
+                    </div>                  
+                </div>
             </div>
             <div class="product">
                 <img src="images/Jacket-4.jpg" alt="Grey Softshell Jacket" class="product-image">
@@ -92,7 +115,14 @@
                     <div class="circle-red"></div>
                     <div class="circle-black"></div>
                 </div>
-                <p>Price: $89</p>
+                <div class="price-cart">
+                    <p class="price__product">$79</p>
+                    <i class="fa-solid fa-cart-shopping shoppingcart"></i>
+                    <div>
+                        <input type="checkbox" id="heart-checkbox-4" class="heart-checkbox"/>
+                        <label for="heart-checkbox-4" class="heart-checkbox-icon"></label>     
+                    </div>                  
+                </div>
             </div>
             <div class="product">
                 <img src="images/Jacket-5.jpg" alt="Green Fleece Jacket" class="product-image">
@@ -104,7 +134,14 @@
                     <div class="circle-red"></div>
                     <div class="circle-black"></div>  
                 </div>
-                <p>Price: $59</p>
+                <div class="price-cart">
+                    <p class="price__product">$79</p>
+                    <i class="fa-solid fa-cart-shopping shoppingcart"></i>
+                    <div>
+                        <input type="checkbox" id="heart-checkbox-5" class="heart-checkbox"/>
+                        <label for="heart-checkbox-5" class="heart-checkbox-icon"></label>     
+                    </div>                  
+                </div>
             </div>
             <div class="product">
                 <img src="images/Jacket-6.jpg" alt="Grey Insulated Jacket" class="product-image">
@@ -114,7 +151,14 @@
                     <div class="circle-orange"></div> 
                     <div class="circle-black"></div> 
                 </div>
-                <p>Price: $119</p>
+                <div class="price-cart">
+                    <p class="price__product">$79</p>
+                    <i class="fa-solid fa-cart-shopping shoppingcart"></i>
+                    <div>
+                        <input type="checkbox" id="heart-checkbox-6" class="heart-checkbox"/>
+                        <label for="heart-checkbox-6" class="heart-checkbox-icon"></label>     
+                    </div>                  
+                </div>
             </div>
         </section>
         <div class="see-more__button">
