--- a/product.html
+++ b/product.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Endurance Softshell Jacket</title>
     <link href="css/styles.css" rel="stylesheet">
+    <link href="css/product.css" rel="stylesheet">
+    <link href="css/media.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -65,7 +67,8 @@
                 </div>
                 <p>Price: $79</p>
                 <a href="cart.html" class="add-to-cart-button">Add to Cart</a>
-                <i class="fa-solid fa-heart"></i>
+                <input type="checkbox" id="heart-checkbox-7" class="heart-checkbox"/>
+                <label for="heart-checkbox-7" class="heart-checkbox-icon"></label>   
             </div>
             <div>
                 <h2>Description</h2>
@@ -92,9 +95,12 @@
                 </div>
                 <p class="extra-product__info">Scott Softshell Jacket</p>
                 <div class="price-cart">
-                    <p>$89</p>
+                    <p class="price-extra-product">$89</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
-                    <i class="fa-solid fa-heart"></i>
+                    <div>
+                        <input type="checkbox" id="heart-checkbox-8" class="heart-checkbox"/>
+                        <label for="heart-checkbox-8" class="heart-checkbox-icon"></label>     
+                    </div>                  
                 </div>
             </div>
             <div class="extra-product__content">
@@ -107,9 +113,12 @@
                 </div>
                 <p class="extra-product__info">Scott Windbreaker 2.0</p>
                 <div class="price-cart">
-                    <p>$99</p>
+                    <p class="price-extra-product">$99</p>
                     <i class="fa-solid fa-cart-shopping"></i>
-                    <i class="fa-solid fa-heart"></i>
+                    <div>
+                        <input type="checkbox" id="heart-checkbox-9" class="heart-checkbox"/>
+                        <label for="heart-checkbox-9" class="heart-checkbox-icon"></label>     
+                    </div>                  
                 </div>
             </div>
             <div class="extra-product__content">
@@ -123,9 +132,12 @@
                 </div>
                 <p class="extra-product__info">Fleece Jacket</p>
                 <div class="price-cart">
-                    <p>$59</p>
+                    <p class="price-extra-product">$59</p>
                     <i class="fa-solid fa-cart-shopping"></i>
-                    <i class="fa-solid fa-heart"></i>
+                    <div>
+                        <input type="checkbox" id="heart-checkbox-10" class="heart-checkbox"/>
+                        <label for="heart-checkbox-10" class="heart-checkbox-icon"></label>     
+                    </div>                  
                 </div>
             </div>
         </section>
