--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <link rel="manifest" href="site.webmanifest">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">
         <link href="css/styles.css" rel="stylesheet">
+        <link href="css/index.css" rel="stylesheet">
+        <link href="css/media.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
