--- a/confirmation.html
+++ b/confirmation.html
@@ -23,7 +23,7 @@
             </ul>    
         </nav>
     </header>
-    <main>
+    <main class="main__content">
         <nav class="nav-back">
             <a href="checkout.html"><i class="fa-solid fa-arrow-left"></i></a> 
             <a href="checkout.html"><p>Back</p></a>
@@ -85,7 +85,7 @@
                 <img src="images/Logo-with-slogan.png" alt="Logo with Slogan" class="logo-with-slogan">
             </div>
             <div>
-                <h3>Shop</h3>
+                <h3 class="shop__heading">Shop</h3>
                 <ul>
                     <li>Men</li>
                     <li>Women</li>
@@ -94,14 +94,14 @@
                 </ul>
             </div>
             <div>
-                <h3>My account</h3>
+                <h3 class="footer__headings">My account</h3>
                 <ul>
                     <li>Log in/Sign up</li>
                     <li>Order Status</li>
                 </ul>
             </div>
             <div>
-                <h3>Help</h3>
+                <h3 class="footer__headings">Help</h3>
                     <ul>
                         <li>FAQ</li>
                         <li>Shipping and Delivery</li>
@@ -111,7 +111,7 @@
                     </ul>
             </div>
             <div>
-                <h3>About</h3>
+                <h3 class="footer__headings">About</h3>
                     <ul>
                         <li>Rainydays</li>
                         <li>Sustainability</li>
@@ -120,7 +120,7 @@
                     </ul>
             </div>
             <div>
-                <h3>Follow us</h3>
+                <h3 class="follow-us__heading">Follow us</h3>
                     <i class="fa-brands fa-facebook-f"></i>
                     <i class="fa-brands fa-instagram"></i>
                     <i class="fa-brands fa-youtube"></i>
