--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <img src="images/Logo-with-slogan.png" alt="Logo with Slogan" class="logo-with-slogan">
                 </div>
                 <div>
-                    <h3>Shop</h3>
+                    <h3 class="shop__heading">Shop</h3>
                     <ul>
                         <li>Men</li>
                         <li>Women</li>
@@ -75,14 +75,14 @@
                     </ul>
                 </div>
                 <div>
-                    <h3>My account</h3>
+                    <h3 class="footer__headings">My account</h3>
                     <ul>
                         <li>Log in/Sign up</li>
                         <li>Order Status</li>
                     </ul>
                 </div>
                 <div>
-                    <h3>Help</h3>
+                    <h3 class="footer__headings">Help</h3>
                         <ul>
                             <li>FAQ</li>
                             <li>Shipping and Delivery</li>
@@ -92,7 +92,7 @@
                         </ul>
                 </div>
                 <div>
-                    <h3>About</h3>
+                    <h3 class="footer__headings">About</h3>
                         <ul>
                             <li>Rainydays</li>
                             <li>Sustainability</li>
@@ -101,7 +101,7 @@
                         </ul>
                 </div>
                 <div>
-                    <h3>Follow us</h3>
+                    <h3 class="follow-us__heading">Follow us</h3>
                         <i class="fa-brands fa-facebook-f"></i>
                         <i class="fa-brands fa-instagram"></i>
                         <i class="fa-brands fa-youtube"></i>
